--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
         <!DOCTYPE html>
-<html itemscope itemtype=http://schema.org/WebPage lang=fr>
+<html itemscope itemtype=http://schema.org/WebPage lang=en>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, user-scalable=no" />
 <title>Olifish : Olivier Colli's galleries</title>
